merged the fixeses